--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.9",
     "@apollo/datasource-rest": "^6.3.0",
+    "@apollo/experimental-nextjs-app-support": "^0.11.6",
     "@apollo/server": "^4.11.2",
     "@as-integrations/next": "^3.1.0",
+    "@heroicons/react": "^2.1.5",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
     "next": "15.0.2",
@@ -21,6 +24,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.3",
+    "@graphql-codegen/client-preset": "^4.5.0",
     "@graphql-codegen/typescript": "4.1.1",
     "@graphql-codegen/typescript-resolvers": "4.4.0",
     "@types/node": "^20",
