--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@graphql-codegen/client-preset": "^4.5.0",
     "@graphql-codegen/typescript": "4.1.1",
     "@graphql-codegen/typescript-resolvers": "4.4.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
